fix(VBtn): remove focus indicator scale transition
fixes #14166

--- a/packages/vuetify/src/components/VBtn/VBtn.sass
+++ b/packages/vuetify/src/components/VBtn/VBtn.sass
@@ -42,13 +42,10 @@
       border: 2px solid currentColor
       border-radius: inherit
       opacity: 0
-      transform: scale(1.25)
-      transition: opacity .2s ease-in-out, transform .2s step-end
+      transition: opacity .2s ease-in-out
 
     &:focus-visible::after
       opacity: calc(.25 * var(--v-theme-overlay-multiplier))
-      transform: scale(1)
-      transition: opacity .2s ease-in-out, transform .2s settings.$decelerated-easing
 
   &--flat
     box-shadow: none
