--- a/packages/vuetify/src/components/VField/_variables.scss
+++ b/packages/vuetify/src/components/VField/_variables.scss
@@ -18,12 +18,17 @@ $field-clearable-transition: .15s opacity, .15s width settings.$standard-easing 
 $field-control-contained-background: rgb(var(--v-theme-surface)) !default;
 $field-control-contained-elevation: 2 !default;
 $field-control-filled-background: rgba(var(--v-theme-on-surface), var(--v-idle-opacity)) !default;
-$field-control-padding: 16px !default;
+$field-control-padding-start: 16px !default;
+$field-control-padding-end: 16px !default;
+$field-control-padding-top: 8px !default;
+$field-control-padding-bottom: 6px !default;
 $field-control-affixed-padding: 12px !default;
 $field-control-affixed-inner-padding: 6px !default;
+$field-control-underlined-height: 40px !default;
+$field-control-height: 56px !default;
 
 // INPUT
-$field-input-padding-top: 30px !default;
+$field-input-padding-top: 32px !default;
 $field-input-opacity: var(--v-high-emphasis-opacity) !default;
 
 // LABEL
