--- a/packages/vuetify/src/components/VSelect/_variables.scss
+++ b/packages/vuetify/src/components/VSelect/_variables.scss
@@ -1,22 +1,8 @@
-@import '../../styles/styles.sass';
+@use '../../styles/settings';
 
-$select-chip-margin: 4px !default;
-$select-dense-chip-margin: 0 4px 0 4px !default;
-$select-selected-chip-opacity: .22 !default;
-$select-prefix-line-height: 20px !default;
-$select-prefix-top: 7px !default;
-$select-selections-padding-top: 20px !default;
-$select-outlined-selections-padding-top: 8px 0 !default;
-$select-outlined-dense-selections-padding-top: 4px 0 !default;
-$select-chips-selections-padding-top: 42px !default;
-$select-active-icon-flip: true !default;
-$select-chips-dense-selections-padding-top: 40px !default;
-$select-active-chip-opacity: 0.2 !default;
-$select-small-chips-selections-min-height: 26px !default;
-$select-chips-box-enclosed-selections-min-height: 68px !default;
-$select-chips-dense-selections-min-height: 40px !default;
-$select-small-chips-dense-selections-min-height: 38px !default;
-$select-selections-line-height: 18px !default;
-$select-selections-margin: 7px 4px 7px 0 !default;
-$select-selections-min-height: 10px !default;
-$select-dense-selections-margin: 5px 4px 3px 0 !default;
+// Defaults
+$select-content-border-radius: 4px !default;
+$select-content-elevation: 4 !default;
+$select-line-height: 1.75 !default;
+$select-transition: .2s settings.$standard-easing !default;
+$select-chips-control-min-height: 64px !default;
