--- a/packages/vuetify/src/components/VBtn/_variables.scss
+++ b/packages/vuetify/src/components/VBtn/_variables.scss
@@ -9,23 +9,6 @@ $button-background: rgb(var(--v-theme-surface)) !default;
 $button-color: rgb(var(--v-theme-on-surface)) !default;
 $button-banner-actions-elevation: 0 !default;
 $button-banner-actions-padding: 0 8px !default;
-$button-bottom-navigation-elevation: 0 !default;
-$button-bottom-navigation-border-radius: 0 !default;
-$button-bottom-navigation-active-filter: grayscale(0) !default;
-$button-bottom-navigation-active-opacity: 1 !default;
-$button-bottom-navigation-filter: grayscale(1) !default;
-$button-bottom-navigation-font-size: tools.map-deep-get(settings.$typography, 'caption', 'size') !default;
-$button-bottom-navigation-max-width: 168px !default;
-$button-bottom-navigation-min-width: 80px !default;
-$button-bottom-navigation-opacity: .64 !default;
-$button-bottom-navigation-shift-active-icon-transform: translateY(-7px) !default;
-$button-bottom-navigation-shift-active-transform: scale(1) translateY(5px) !default;
-$button-bottom-navigation-shift-icon-transform: translateY(0) !default;
-$button-bottom-navigation-shift-opacity: 0 !default;
-$button-bottom-navigation-shift-top: 50% !default;
-$button-bottom-navigation-shift-transform: scale(.8) translateY(10px) !default;
-$button-bottom-navigation-text-transform: none !default;
-$button-bottom-navigation-transition-duration: .2s !default;
 $button-pagination-active-overlay-opacity: var(--v-border-opacity) !default;
 $button-pagination-border-radius: settings.$border-radius-root !default;
 $button-border-color: settings.$border-color-root !default;
@@ -36,6 +19,7 @@ $button-border-width: 0 !default;
 $button-card-actions-elevation: 0 !default;
 $button-card-actions-margin: .5rem !default;
 $button-card-actions-padding: 0 8px !default;
+$button-content-transition: transform, opacity .2s settings.$standard-easing !default;
 $button-disabled-opacity: 0.26 !default;
 $button-disabled-overlay: 0.12 !default;
 $button-elevation: ('default': 2, 'hover': 4, 'active': 8) !default;
@@ -47,7 +31,7 @@ $button-icon-border-radius: map.get(settings.$rounded, 'circle') !default;
 $button-icon-font-size: 1rem !default;
 $button-icon-size: 48px !default;
 $button-line-height: normal !default;
-$button-stacked-line-height: 1.7 !default;
+$button-stacked-line-height: 1.25 !default;
 $button-plain-opacity: .62 !default;
 $button-padding-ratio: 2.25 !default;
 $button-stacked-padding-ratio: 4.5 !default;
