fix(VList): use correct text color

--- a/packages/vuetify/src/components/VList/VListItem.sass
+++ b/packages/vuetify/src/components/VList/VListItem.sass
@@ -32,6 +32,7 @@
   $root: &
 
   align-self: center
+  color: rgba(var(--v-theme-on-surface), var(--v-medium-emphasis-opacity))
   transition: inherit
   transition-property: height, width
 
