--- a/packages/vuetify/src/components/VList/_variables.scss
+++ b/packages/vuetify/src/components/VList/_variables.scss
@@ -9,7 +9,7 @@ $list-border-radius: 0 !default;
 $list-border-style: settings.$border-style-root !default;
 $list-border-thin-width: thin !default;
 $list-border-width: 0 !default;
-$list-color: rgba(var(--v-theme-on-surface)) !default;
+$list-color: rgba(var(--v-theme-on-surface), var(--v-high-emphasis-opacity)) !default;
 $list-disabled-opacity: 0.6 !default;
 $list-elevation: 0 !default;
 $list-padding: 8px 0 !default;
