--- a/packages/vuetify/src/components/VToolbar/_variables.scss
+++ b/packages/vuetify/src/components/VToolbar/_variables.scss
@@ -12,6 +12,7 @@ $toolbar-content-padding-x: 16px !default;
 $toolbar-content-padding-y: 4px !default;
 $toolbar-density: ( 'default': 0, 'comfortable': -1, 'compact': -2, 'prominent': -3 ) !default;
 $toolbar-elevation: 4 !default;
+$toolbar-flat-elevation: 0 !default;
 $toolbar-padding-end: 16px !default;
 $toolbar-padding-start: 16px !default;
 $toolbar-padding: 16px !default;
