sass(VToolbar): fix sass variable name

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -40,7 +40,7 @@
       border-bottom-left-radius: $toolbar-collapsed-border-radius
 
   &--flat
-    @include tools.elevation($toolbar-bar-flat-elevation)
+    @include tools.elevation($toolbar-flat-elevation)
 
   &--floating
     display: inline-flex
