--- a/packages/vuetify/src/components/VBtnGroup/VBtnGroup.sass
+++ b/packages/vuetify/src/components/VBtnGroup/VBtnGroup.sass
@@ -12,6 +12,7 @@
   flex: 1 1
   max-width: 100%
   min-width: 0
+  overflow: hidden
 
   @include tools.border($btn-group-border...)
   @include tools.elevation($btn-group-elevation)
@@ -21,18 +22,10 @@
   @at-root
     @include tools.density('v-btn-group', $button-density) using ($modifier)
       @at-root #{selector.append(&, $root)}
-        height: 48px + $modifier
+        height: $btn-group-height + $modifier
 
   .v-btn
     border-radius: 0
-
-    &:first-child
-      border-top-left-radius: inherit
-      border-bottom-left-radius: inherit
-
-    &:last-child
-      border-top-right-radius: inherit
-      border-bottom-right-radius: inherit
 
     &:not(:last-child)
       border-right: none
