--- a/packages/vuetify/src/components/VBtnGroup/_variables.scss
+++ b/packages/vuetify/src/components/VBtnGroup/_variables.scss
@@ -9,6 +9,7 @@ $btn-group-border-color: $border-color-root !default;
 $btn-group-border-thin-width: thin !default;
 $btn-group-border-width: 0 !default;
 $btn-group-color: rgb(var(--v-theme-on-surface)) !default;
+$btn-group-height: 48px !default;
 $btn-group-elevation: 0 !default;
 $btn-group-tile-border-radius: 0 !default;
 
