fix(VToolbar): justify prepend/append slots

--- a/packages/vuetify/src/components/VToolbar/VToolbar.sass
+++ b/packages/vuetify/src/components/VToolbar/VToolbar.sass
@@ -71,10 +71,14 @@
   display: flex
 
 .v-toolbar__prepend
+  margin-inline-end: auto
+
   > .v-btn:first-child
     margin-inline-start: $toolbar-prepend-btn-margin-start
 
 .v-toolbar__append
+  margin-inline-start: auto
+
   > .v-btn:last-child
     margin-inline-end: $toolbar-append-btn-margin-end
 
