--- a/packages/vuetify/src/components/VChipGroup/_variables.scss
+++ b/packages/vuetify/src/components/VChipGroup/_variables.scss
@@ -1,6 +1,4 @@
-@import '../../styles/styles.sass';
-
-$chip-group-content-padding: 4px 0 !default;
+// Defaults
+$chip-group-selected-opacity: var(--v-activated-opacity) !default;
+$chip-group-padding: 4px 0 !default;
 $chip-group-margin: 4px 8px 4px 0 !default;
-$chip-group-no-color-focus-opacity: .32 !default;
-$chip-group-no-color-opacity: .22 !default;
